--- a/template-webapp/src/main/webapp/matrix/css/styles.css
+++ b/template-webapp/src/main/webapp/matrix/css/styles.css
@@ -41,6 +41,11 @@ body.matrix {
 }
 
 #top-nav, #search {
+	height: 38px;
+	min-height: 38px;
+	margin: 0px;
+	border: none;
+    border-radius: 0px;
 }
 
 #top-nav>ul {
@@ -61,3 +66,40 @@ body.matrix {
     border-right: 1px solid #000;
 }
 
+#top-nav > ul > li > a {
+    padding: 9px 10px;
+    display: block;
+    font-size: 11px;
+    height: 38px;
+    color: #999;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.25);
+}
+
+#top-nav >ul > li > a:hover {
+	color: #FFF;
+    background: #000 none repeat scroll 0% 0%;
+}
+
+#breadcrumb {
+    background-color: #FFF;
+    border-bottom: 1px solid #E3EBED;
+    height: 37px;
+    min-height: 37px;
+    padding: 0px;
+    margin-top: 2px;
+    border-radius: 0px;
+}
+
+#breadcrumb a:last-child {
+    background-image: none;
+}
+
+#breadcrumb a {
+    padding: 8px 20px 8px 10px;
+    display: inline-block;
+    background-image: url("../img/breadcrumb.png");
+    background-position: right center;
+    background-repeat: no-repeat;
+    font-size: 11px;
+    color: #666;
+}
