--- a/template-webapp/src/main/webapp/matrix/css/styles.css
+++ b/template-webapp/src/main/webapp/matrix/css/styles.css
@@ -236,3 +236,187 @@ body.matrix {
 	position: relative;
 	left: 220px;
 }
+
+
+/*
+  Helper classes
+*/
+
+.fill, .filled {
+	width: 100%;
+	height: 100%;
+}
+
+.auto-scroll, .autoscroll {
+	overflow: auto;
+}
+
+.normal-padding, .normalpadding {
+    padding: 10px;
+}
+
+.less-padding, .lesspadding {
+    padding: 5px;
+}
+
+.least-padding, .leastpadding {
+	padding: 2px;
+}
+
+.no-padding, .nopadding {
+	padding: 0px!important;
+}
+
+.more-padding, .morepadding {
+	padding: 15px;
+}
+
+.most-padding, .mostpadding {
+	padding: 20px;
+}
+
+.normal-margin, .normalmargin {
+    margin: 10px;
+}
+
+.less-margin, .lessmargin {
+    margin: 5px;
+}
+
+.least-margin, .leastmargin {
+    margin: 2px;
+}
+
+.more-margin, .moremargin {
+    margin: 15px;
+}
+
+.most-margin, .mostmargin {
+    margin: 20px;
+}
+
+.no-margin, .nomargin {
+	margin: 0px!important;
+}
+
+.no-border, .noborder {
+	border-style: none!important;
+}
+
+/*
+  Widget box
+*/
+.widget-box {
+    background: none repeat scroll 0 0 #F9F9F9;
+    border-left: 1px solid #CDCDCD;
+    border-top: 1px solid #CDCDCD;
+    border-right: 1px solid #CDCDCD;
+    clear: both;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    position: relative;
+}
+
+.widget-title, .modal-header, .table th, div.dataTables_wrapper .ui-widget-header {
+    background: #efefef;
+    border-bottom: 1px solid #CDCDCD;
+    height: 36px;
+}
+
+.widget-title span.icon {
+    padding: 9px 10px 7px 11px;
+    float: left;
+    border-right: 1px solid #dadada;
+}
+
+.widget-title h5 {
+    color: #666;
+    float: left;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px;
+    line-height: 12px;
+    margin: 0;
+}
+
+.widget-content {
+    padding: 15px;
+    border-bottom: 1px solid #cdcdcd;
+}
+
+/*
+  Tables
+*/
+.table>thead>tr>th {
+    height: auto;
+    padding: 5px 10px;
+    border-bottom: 0px;
+    text-align: center;
+    color: #666666;
+}
+
+.no-padding .table-bordered, .nopadding .table-bordered {
+    border: 0;
+}
+
+.no-padding .table-bordered>thead>tr>th:first-child,
+.nopadding .table-bordered>thead>tr>th:first-child,
+.no-padding .table-bordered>tbody>tr>td:first-child,
+.nopadding .table-bordered>tbody>tr>td:first-child {
+    border-left: 0;
+}
+
+.no-padding .table-bordered>thead>tr>th:last-child,
+.nopadding .table-bordered>thead>tr>th:last-child,
+.no-padding .table-bordered>tbody>tr>td:last-child,
+.nopadding .table-bordered>tbody>tr>td:last-child {
+    border-right: 0;
+}
+
+.no-padding .table-bordered>tbody>tr:last-child>td,
+.nopadding .table-bordered>tbody>tr:last-child>td {
+    border-bottom: 0;
+}
+
+.no-padding .table, .nopadding .table {
+    margin-bottom: 0;
+}
+
+th.filtered-input {
+	width: 200px;
+}
+
+th.filtered-input input {
+    height: 28px;
+    font-size: 12px;
+}
+
+th.filtered-input .form-control-feedback {
+    height: 28px;
+    line-height: 28px;
+}
+
+th.rownum {
+	width: 50px;
+}
+
+th.ops {
+	width: 70px;
+}
+
+/*
+  Forms
+*/
+select, textarea,
+input[type="text"], input[type="password"], input[type="datetime"],
+input[type="datetime-local"], input[type="date"], input[type="month"],
+input[type="time"], input[type="week"], input[type="number"],
+input[type="email"], input[type="url"], input[type="search"],
+input[type="tel"], input[type="color"],
+.uneditable-input, .label, .dropdown-menu, .btn, .well, .progress,
+.table-bordered,
+.btn-group > .btn:first-child, .btn-group > .btn:last-child,
+.btn-group > .btn:last-child, .btn-group > .dropdown-toggle,
+.alert {
+    border-radius: 0px;
+}
